--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.5.0
 Django==2.2
+django-mathfilters==1.0.0
 gunicorn==20.1.0
-psycopg2-binary==2.9.3
-wheel==0.37.1
+pytz==2022.1
+sqlparse==0.4.2
 whitenoise==6.1.0
